--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "connect-mongo": "^2.0.0",
+    "connect-pg-simple": "^5.0.0",
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
@@ -42,11 +43,11 @@
     "fbgraph": "^1.4.1",
     "lodash": "^4.17.4",
     "lusca": "^1.5.2",
-    "mongoose": "^4.13.11",
     "nodemailer": "^4.4.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
+    "pg": "^7.4.3",
     "pug": "^2.0.0-rc.4",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
@@ -67,8 +68,6 @@
     "@types/jquery": "^3.2.17",
     "@types/lodash": "^4.14.91",
     "@types/lusca": "^1.5.0",
-    "@types/mongodb": "^3.0.5",
-    "@types/mongoose": "^4.7.34",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.4.6",
     "@types/nodemailer": "^4.3.4",
