--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "hoek": "^5.0.3",
+    "ini": "^1.3.5",
     "lodash": "^4.17.10",
     "lusca": "^1.6.0",
     "nodemailer": "^4.6.7",
