--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.4.3",
+    "pg-promise": "^8.4.4",
     "pug": "^2.0.3",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
