Node and Postgre integration working on apache inside vagrant, some commands have to be run inside vagrant before working tho. Will make ansible files for these commands

--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "dependencies": {
+    "@types/pg": "^7.4.10",
     "async": "^2.6.1",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
     "connect-pg-simple": "^5.0.0",
+    "connect-redis": "^3.3.3",
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
@@ -43,7 +45,6 @@
     "nodemailer": "^4.6.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pg": "^7.4.3",
     "pg-promise": "^8.4.4",
     "pug": "^2.0.3",
     "request": "^2.87.0",
@@ -75,8 +76,11 @@
     "@types/winston": "^2.3.9",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
+    "connect-pg-pool": "^4.0.0",
     "jest": "^22.4.4",
     "nodemon": "^1.17.5",
+    "pg": "^7.4.3",
+    "pg-pool": "^2.0.3",
     "shelljs": "^0.8.2",
     "supertest": "^3.1.0",
     "ts-jest": "^22.4.6",
