--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 MONGODB_URI=mongodb://<mlab_user>:<mlab_password>@<mlab_connection_url>
 
 # This is standard running mongodb locally
-MONGODB_URI_LOCAL=mongodb://localhost:27017
+PG_URL=postgres://appaccount:postgres@10.10.10.10:5432/justus
 
 # Put lots of randomness in these
 SESSION_SECRET=ashdfjhasdlkjfhalksdjhflak
