--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ini": "^1.3.5",
     "lodash": "^4.17.10",
     "lusca": "^1.6.0",
+    "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
