--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "morgan": "^1.9.0",
     "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.7",
+    "nowjs-core": "^0.20.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg-promise": "^8.4.4",
