--- a/ansible/roles/os-setup/tasks/main.yml
+++ b/ansible/roles/os-setup/tasks/main.yml
@@ -31,3 +31,33 @@
 - name: Change permissions of /etc/rc.local to make it run on boot
   shell: chmod +x /etc/rc.d/rc.local
   become_method: sudo
+
+- name: Set SELinux to permissive to allow PostgreSQL access
+  selinux:
+    policy: targeted
+    state: permissive
+
+- set_fact:
+    pubkey_file: "{{ playbook_dir }}/../id_rsa.pub"
+
+- set_fact:
+    pubkey: "{{lookup('file', pubkey_file) }}"
+  ignore_errors: true
+
+- name: Add public key
+  authorized_key:
+    key: "{{ pubkey }}"
+    user: vagrant
+    state: present
+  when: (pubkey|default(False)) != False
+
+- name: Make user to start on sources folder
+  lineinfile:
+    path: /home/vagrant/.bashrc
+    state: present
+    line: 'cd /opt/sources &> /dev/null'
+    regex: '^cd '
+    create: yes
+    owner: vagrant
+    group: vagrant
+    mode: '0644'
