--- a/ansible/roles/services/files/postgres.ini
+++ b/ansible/roles/services/files/postgres.ini
@@ -1,5 +1,5 @@
 [program:postgresql]
-command=/usr/bin/postgres -D /var/lib/pgsql/data -c config_file=/etc/postgresql/postgresql.conf
+command=/usr/bin/postgres -D /var/lib/pgsql/data -p 5432
 stdout_logfile=/var/log/supervisor/postgres.log
 stderr_logfile=/var/log/supervisor/postgres.err
 user=postgres
