--- a/ansible/roles/services/tasks/main.yml
+++ b/ansible/roles/services/tasks/main.yml
@@ -18,7 +18,7 @@
     mode: 0644
   with_items:
     - httpd.ini
-    - node.ini
+    - justus.ini
     - postgres.ini
     - redis.ini
   notify: Reload Supervisor
