Add samba service

--- a/ansible/roles/firewall/tasks/main.yml
+++ b/ansible/roles/firewall/tasks/main.yml
@@ -14,6 +14,7 @@
     - { port: 3000, protocol: tcp, comment: "Open port 3000 for node"}
     - { port: 8080, protocol: tcp, comment: "Open port 8080 for Apache" }
     - { port: 5432, protocol: tcp, comment: "Open port 5432 for pgAdmin" }
+    - { port: 445, protocol: tcp, comment: "Open port 445 for samba" }
 
 #- name: Restart server to apply firewall rules
 #  command: /sbin/shutdown -r
